# otel-instrumentation-nats

./: .pre-commit-config.yaml  .ruff.toml  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: test.yaml
src/otel_instrumentation_nats/: __init__.py  context_propagation.py  instrumentor.py  jetstream_wrapper.py  package.py  publish_wrapper.py  request_wrapper.py  subscribe_wrapper.py  utils.py
tests/: conftest.py  test_context_propagation.py  test_instrumentor.py  test_jetstream.py  test_publish.py  test_request.py  test_subscribe.py
